--- a/examples/bosh-release-notifications.yml
+++ b/examples/bosh-release-notifications.yml
@@ -3,6 +3,8 @@ jobs:
   plan:
   - get: release
     trigger: true
+    params:
+      tarball: false
   - put: slack
     params:
       text: "A new version of bosh is available."
